# bicycles

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  uwsgi.ini
.github/workflows/: django.yml
application/: demo_fixture.json  requirements.txt
application/core/: celery.py  settings.py  urls.py
application/core/settings/: base.py  development.py  testing.py
application/rent/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
application/tests/: conftest.py  test_all_bicycles_view.py  test_auth_endpoints.py  test_bicycle_model.py  test_bicycle_serializer.py  test_rent_bicycle_model.py  test_rent_bicycle_serializer.py  test_rent_bicycle_view.py  test_stop_rent_view.py
application/users/: urls.py
nginx/: Dockerfile  nginx.conf
user_service/core/: settings.py  urls.py
